small changes in webpack config and dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,4 @@ services:
     volumes:
       - ./:/app
     environment:
-      - appName=indep-1
-      - inspector=9229
+      - NODE_ENV=development
