--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "node_modules/webpack/bin/webpack.js --progress -p --env.production --config config/webpack.config.js",
-    "start": "npm run start:dev",
-    "start:dev": "webpack -w --config config/webpack.config.js",
-    "start:prod": "npm run build ; nodemon build/compiled",
+    "build": "tsc -p tsconfig.build.json",
+    "start": "chmod +x config/startBasedOnEnv.sh && config/startBasedOnEnv.sh",
+    "start:dev": "nodemon",
+    "debug": "nodemon --config nodemon-debug.json",
+    "start:prod": "rm -rf build/* && npm run build && node build/bin/www.js",
     "test": "node_modules/ts-node/dist/bin.js ./node_modules/mocha/bin/mocha -r ts-node/register ./tests/bootstrap.test.ts ./tests/unit/0.00.0/0.0.test.ts ./tests/integration/0.00.0/0.0.test.ts",
     "integration": "node_modules/ts-node/dist/bin.js ./node_modules/mocha/bin/mocha -r ts-node/register ./tests/bootstrap.test.ts ./tests/integration/0.00.0/0.0.test.ts"
   },
@@ -30,17 +31,14 @@
     "@types/node": "^11.9",
     "@types/serve-static": "^1.13",
     "nodemon": "^1.18",
-    "reload-server-webpack-plugin": "^1.0",
-    "ts-loader": "^5.3",
-    "typescript": "^3.3",
-    "webpack": "^4.29",
-    "webpack-cli": "^3.2.3"
+    "typescript": "^3.3"
   },
   "repository": {
     "type": "git",
     "url": ""
   },
   "dependencies": {
+    "@types/glob": "^7.1.1",
     "app-root-path": "^2.1",
     "body-parser": "^1.18",
     "chai": "^4.2",
@@ -50,8 +48,10 @@
     "ejs": "^2.6",
     "express": "^4.16",
     "express-pino-logger": "^4.0",
+    "glob": "^7.1.3",
     "mocha": "^5.2",
     "mongoose": "^5.4",
-    "ts-node": "^8.0"
+    "ts-node": "^8.0",
+    "tsconfig-paths": "^3.8.0"
   }
 }
