setup validation hooks and logging

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/mocha": "^5.2",
     "@types/mongoose": "^5.3",
     "@types/node": "^11.9",
+    "@types/pino": "^5.8.5",
     "@types/serve-static": "^1.13",
     "nodemon": "^1.18",
     "reload-server-webpack-plugin": "^1.0",
@@ -52,6 +53,7 @@
     "express-pino-logger": "^4.0",
     "mocha": "^5.2",
     "mongoose": "^5.4",
+    "pino-pretty": "^2.5.0",
     "ts-node": "^8.0"
   }
 }
