--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
             "dom",
             "es2015",
         ],
-        "baseUrl": "./"
+        "baseUrl": "./",
     },
     "exclude": [
         "node_modules",
